--- a/competition/assigment.ipynb
+++ b/competition/assigment.ipynb
@@ -3,7 +3,23 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Imports"
+    "# Competição ML @SBS/DAA - 5ª Edição (2022/2023)\n",
+    "\n",
+    "Esta competição está relacionada com o Trabalho Prático de Grupo das UCs do perfil Machine Learning: Fundamentos e Aplicações da Uminho e da UC Dados e Aprendizagem Automática, tendo, como destinatários, alunos do Mestrado em Engenharia Informática, do Mestrado em Matemática e Computação, e do Mestrado em Engenharia de Sistemas.\n",
+    "\n",
+    "# Descrição da Competição\n",
+    "A previsão da quantidade de incidentes rodoviários é um conhecido problema de características estocásticas, não-lineares. Tem, contudo, aparecido na literatura um conjunto de modelos que demonstram um potencial assinalável neste tipo de previsões. Com isso em consideração, foi construído um dataset que contém dados referentes à quantidade e características dos incidentes rodoviários que ocorreram na cidade de Guimarães em 2021 (o dataset cobre um período que vai desde o dia 01 de Janeiro de 2021 até ao dia 31 de Dezembro do mesmo ano).\n",
+    "\n",
+    "Com esta competição espera-se que os alunos desenvolvam e otimizem modelos de Machine Learning que sejam capazes de prever o número de incidentes rodoviários que irão acontecer na cidade de Guimarães a uma determinada hora."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Carregar variaveis de ambiente"
    ],
    "metadata": {
     "collapsed": false
@@ -12,6 +28,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!conda install python-dotenv -y  # Correr isto para instalar as dependencias necessarias"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "DATASET_SOURCE = os.environ.get(\"DATASET_SOURCE\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Imports utilizados"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -40,19 +93,21 @@
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "\n",
-    "%matplotlib inline"
+    "% matplotlib inline"
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "### Mudar o modo que a Interactive shell imprime as variáveis"
+   ],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from IPython.core.interactiveshell import InteractiveShell\n",
@@ -66,7 +121,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Loading the training dataset"
+    "## Loading the training dataset"
    ],
    "metadata": {
     "collapsed": false
@@ -74,10 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv(r'C:\\Users\\gonca\\OneDrive\\Ambiente de Trabalho\\MEI\\1sem\\DAA\\Pratical Assigment\\training_data.csv')"
+    "train_df = pd.read_csv(os.path.basename(DATASET_SOURCE))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Exploring"
    ],
    "metadata": {
     "collapsed": false
@@ -85,8 +149,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 24,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5000 entries, 0 to 4999\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   city_name           5000 non-null   object \n",
+      " 1   magnitude_of_delay  5000 non-null   object \n",
+      " 2   delay_in_seconds    5000 non-null   int64  \n",
+      " 3   affected_roads      4915 non-null   object \n",
+      " 4   record_date         5000 non-null   object \n",
+      " 5   luminosity          5000 non-null   object \n",
+      " 6   avg_temperature     5000 non-null   float64\n",
+      " 7   avg_atm_pressure    5000 non-null   float64\n",
+      " 8   avg_humidity        5000 non-null   float64\n",
+      " 9   avg_wind_speed      5000 non-null   float64\n",
+      " 10  avg_precipitation   5000 non-null   float64\n",
+      " 11  avg_rain            5000 non-null   object \n",
+      " 12  incidents           5000 non-null   object \n",
+      "dtypes: float64(5), int64(1), object(7)\n",
+      "memory usage: 507.9+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "train_df.head()\n",
     "\n",
@@ -122,7 +213,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "train_df[['magnitude_of_delay','delay_in_seconds']]"
+    "train_df[['magnitude_of_delay', 'delay_in_seconds']]"
    ],
    "metadata": {
     "collapsed": false
@@ -175,7 +266,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Data preparation"
+    "## Data preparation"
    ],
    "metadata": {
     "collapsed": false
