Comecei, pouquinho, a mexer na modelação

--- a/melhor_grupo/assigment.ipynb
+++ b/melhor_grupo/assigment.ipynb
@@ -997,9 +997,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import fbeta_score\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import mean_squared_error\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### O target são as sales. Depois melhoro o texto :)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = dataset['Profit']\n",
+    "X = dataset.drop(['Profit'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = DecisionTreeClassifier(random_state=2021)\n",
+    "#Acho que podemos converter os mais importantes para one-hot enconding ou algo do género. Depois continuo\n",
+    "#clf.fit(X_train, y_train)\n",
+    "\n",
+    "#scores = cross_val_score(clf, X, y, cv=5)"
+   ]
   },
   {
    "cell_type": "markdown",
