--- a/melhor_grupo/assigment.ipynb
+++ b/melhor_grupo/assigment.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 143,
    "metadata": {
     "tags": []
    },
@@ -998,10 +998,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pandas import DatetimeIndex\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
@@ -1028,41 +1030,365 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = dataset['Profit']\n",
-    "X = dataset.drop(['Profit'], axis=1)"
+    "#dataset = dataset.drop(columns=['Order ID', 'Customer ID', 'Customer Name', 'Product ID', 'Product Name', 'Postal Code'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "y = dataset['Profit']\n",
+    "\n",
+    "X = dataset.drop(['Profit', 'Order ID', 'Customer Name', 'Product Name','Postal Code', 'Region', 'City' ], axis=1)\n",
+    "#print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"Order Date\" in X:\n",
+    "    consider_year = True\n",
+    "    consider_month = True\n",
+    "    consider_day = True\n",
+    "else: \n",
+    "    consider_year = False\n",
+    "    consider_month = False\n",
+    "    consider_day = False\n",
+    "    \n",
+    "# Converter datas \n",
+    "dates_order = DatetimeIndex(pd.to_datetime(X['Order Date'],format='%d-%m-%Y', errors='coerce'))\n",
+    "dates_ship = DatetimeIndex(pd.to_datetime(X['Ship Date'],format='%d-%m-%Y', errors='coerce'))\n",
+    "if consider_year : \n",
+    "    X['Year_order'] = dates_order.year\n",
+    "    X['Year_ship'] = dates_ship.year\n",
+    "    \n",
+    "if consider_month : \n",
+    "    X['Month_order'] = dates_order.month\n",
+    "    X['Month_ship'] = dates_ship.month\n",
+    "\n",
+    "if consider_day : \n",
+    "    X['Day_order'] = dates_order.day\n",
+    "    X['Day_ship'] = dates_ship.day\n",
+    "if 'Order Date' in X:\n",
+    "    X = X.drop(['Order Date', 'Ship Date'], axis=1)\n",
+    "#print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert ID's to Label encoding\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "if \"Category\" in X:\n",
+    "    process_Product_ID = True\n",
+    "    process_Costumer_ID = True\n",
+    "    process_Category = True\n",
+    "    process_Sub_Category = True\n",
+    "else: \n",
+    "    process_Product_ID = False\n",
+    "    process_Costumer_ID = False\n",
+    "    process_Category = False\n",
+    "    process_Sub_Category = False\n",
+    "\n",
+    "lb_make = LabelEncoder()\n",
+    "\n",
+    "if process_Product_ID:\n",
+    "    X[\"Product ID LabelEnc\"] = lb_make.fit_transform(X[\"Product ID\"])\n",
+    "\n",
+    "if process_Costumer_ID:\n",
+    "    X[\"Costumer ID LabelEnc\"] = lb_make.fit_transform(X[\"Customer ID\"])\n",
+    "\n",
+    "if process_Category:\n",
+    "    X[\"Category LabelEnc\"] = lb_make.fit_transform(X[\"Category\"])\n",
+    "\n",
+    "if process_Sub_Category:\n",
+    "    X[\"Sub-Category LabelEnc\"] = lb_make.fit_transform(X[\"Sub-Category\"])\n",
+    "\n",
+    "if process_Product_ID: \n",
+    "    X = X.drop(['Product ID', 'Customer ID', \"Category\", \"Sub-Category\"], axis=1)\n",
+    "#print(X)\n",
+    "  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Para testar, falta corrigir estas categorias:\n",
+    "if 'Order Priority' in X:\n",
+    "    X = X.drop(['Order Priority', 'Market', \"Country\", \"State\", \"Segment\", \"Ship Mode\"], axis=1)\n",
+    "\n",
+    "# Tirar os NaN de y, substituindo pela média\n",
+    "mean_value= y.mean()\n",
+    "# Trocar infinitos por nan\n",
+    "df.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+    "y.fillna(value=mean_value, inplace=True)\n",
+    "\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=101)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 171,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row ID\n",
+      "39048    467.970\n",
+      "9583     108.360\n",
+      "13840     43.335\n",
+      "21271     36.882\n",
+      "1903     575.960\n",
+      "          ...   \n",
+      "46215    589.320\n",
+      "29895    567.486\n",
+      "12648    154.260\n",
+      "36027    212.640\n",
+      "19656     23.700\n",
+      "Name: Sales, Length: 40958, dtype: float64\n",
+      "Row ID\n",
+      "39048     3.0\n",
+      "9583      2.0\n",
+      "13840     3.0\n",
+      "21271     1.0\n",
+      "1903      7.0\n",
+      "         ... \n",
+      "46215    12.0\n",
+      "29895     5.0\n",
+      "12648     3.0\n",
+      "36027     6.0\n",
+      "19656     2.0\n",
+      "Name: Quantity, Length: 40958, dtype: float64\n",
+      "Row ID\n",
+      "39048    0.00\n",
+      "9583     0.00\n",
+      "13840    0.10\n",
+      "21271    0.10\n",
+      "1903     0.00\n",
+      "         ... \n",
+      "46215    0.00\n",
+      "29895    0.07\n",
+      "12648    0.00\n",
+      "36027    0.00\n",
+      "19656    0.00\n",
+      "Name: Discount, Length: 40958, dtype: float64\n",
+      "Row ID\n",
+      "39048     35.22\n",
+      "9583       7.55\n",
+      "13840      6.85\n",
+      "21271      9.80\n",
+      "1903     111.15\n",
+      "          ...  \n",
+      "46215     59.19\n",
+      "29895     42.33\n",
+      "12648     15.30\n",
+      "36027     15.03\n",
+      "19656      1.07\n",
+      "Name: Shipping Cost, Length: 40958, dtype: float64\n",
+      "Row ID\n",
+      "39048    2012\n",
+      "9583     2012\n",
+      "13840    2014\n",
+      "21271    2011\n",
+      "1903     2014\n",
+      "         ... \n",
+      "46215    2012\n",
+      "29895    2012\n",
+      "12648    2011\n",
+      "36027    2012\n",
+      "19656    2012\n",
+      "Name: Year_order, Length: 40958, dtype: int64\n",
+      "Row ID\n",
+      "39048    2012\n",
+      "9583     2012\n",
+      "13840    2014\n",
+      "21271    2011\n",
+      "1903     2014\n",
+      "         ... \n",
+      "46215    2012\n",
+      "29895    2012\n",
+      "12648    2011\n",
+      "36027    2012\n",
+      "19656    2012\n",
+      "Name: Year_ship, Length: 40958, dtype: int64\n",
+      "Row ID\n",
+      "39048     6\n",
+      "9583      1\n",
+      "13840     9\n",
+      "21271     7\n",
+      "1903     12\n",
+      "         ..\n",
+      "46215     5\n",
+      "29895    10\n",
+      "12648    11\n",
+      "36027     3\n",
+      "19656     6\n",
+      "Name: Month_order, Length: 40958, dtype: int64\n",
+      "Row ID\n",
+      "39048     6\n",
+      "9583      1\n",
+      "13840     9\n",
+      "21271     7\n",
+      "1903     12\n",
+      "         ..\n",
+      "46215     5\n",
+      "29895    10\n",
+      "12648    11\n",
+      "36027     3\n",
+      "19656     6\n",
+      "Name: Month_ship, Length: 40958, dtype: int64\n",
+      "Row ID\n",
+      "39048    18\n",
+      "9583      4\n",
+      "13840     8\n",
+      "21271    20\n",
+      "1903     17\n",
+      "         ..\n",
+      "46215    28\n",
+      "29895     8\n",
+      "12648     2\n",
+      "36027    29\n",
+      "19656    21\n",
+      "Name: Day_order, Length: 40958, dtype: int64\n",
+      "Row ID\n",
+      "39048    24\n",
+      "9583     10\n",
+      "13840     8\n",
+      "21271    22\n",
+      "1903     19\n",
+      "         ..\n",
+      "46215    30\n",
+      "29895    12\n",
+      "12648     7\n",
+      "36027    31\n",
+      "19656    25\n",
+      "Name: Day_ship, Length: 40958, dtype: int64\n",
+      "Row ID\n",
+      "39048    9899\n",
+      "9583     8217\n",
+      "13840    6820\n",
+      "21271    1489\n",
+      "1903      346\n",
+      "         ... \n",
+      "46215    7897\n",
+      "29895      63\n",
+      "12648    3641\n",
+      "36027    6244\n",
+      "19656    5775\n",
+      "Name: Product ID LabelEnc, Length: 40958, dtype: int32\n",
+      "Row ID\n",
+      "39048     860\n",
+      "9583      242\n",
+      "13840     276\n",
+      "21271    1507\n",
+      "1903     1099\n",
+      "         ... \n",
+      "46215     333\n",
+      "29895     800\n",
+      "12648     208\n",
+      "36027    1244\n",
+      "19656    1289\n",
+      "Name: Costumer ID LabelEnc, Length: 40958, dtype: int32\n",
+      "Row ID\n",
+      "39048    2\n",
+      "9583     2\n",
+      "13840    1\n",
+      "21271    0\n",
+      "1903     0\n",
+      "        ..\n",
+      "46215    1\n",
+      "29895    0\n",
+      "12648    1\n",
+      "36027    1\n",
+      "19656    1\n",
+      "Name: Category LabelEnc, Length: 40958, dtype: int32\n",
+      "Row ID\n",
+      "39048    13\n",
+      "9583      0\n",
+      "13840    14\n",
+      "21271     9\n",
+      "1903      4\n",
+      "         ..\n",
+      "46215    12\n",
+      "29895     4\n",
+      "12648     3\n",
+      "36027    12\n",
+      "19656    10\n",
+      "Name: Sub-Category LabelEnc, Length: 40958, dtype: int32\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "float() argument must be a string or a number, not 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [171]\u001b[0m, in \u001b[0;36m<cell line: 32>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     29\u001b[0m     X_train_transformed[coisa] \u001b[38;5;241m=\u001b[39m lb_make\u001b[38;5;241m.\u001b[39mfit_transform(X_train[coisa]) \n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m# X_train_transformed = lb_make.fit_transform(X_train)\u001b[39;00m\n\u001b[1;32m---> 32\u001b[0m \u001b[43mclf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train_transformed\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train_transformed\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\tree\\_classes.py:937\u001b[0m, in \u001b[0;36mDecisionTreeClassifier.fit\u001b[1;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[0;32m    899\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfit\u001b[39m(\n\u001b[0;32m    900\u001b[0m     \u001b[38;5;28mself\u001b[39m, X, y, sample_weight\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, check_input\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, X_idx_sorted\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdeprecated\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    901\u001b[0m ):\n\u001b[0;32m    902\u001b[0m     \u001b[38;5;124;03m\"\"\"Build a decision tree classifier from the training set (X, y).\u001b[39;00m\n\u001b[0;32m    903\u001b[0m \n\u001b[0;32m    904\u001b[0m \u001b[38;5;124;03m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    934\u001b[0m \u001b[38;5;124;03m        Fitted estimator.\u001b[39;00m\n\u001b[0;32m    935\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 937\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    938\u001b[0m \u001b[43m        \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    939\u001b[0m \u001b[43m        \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    940\u001b[0m \u001b[43m        \u001b[49m\u001b[43msample_weight\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msample_weight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    941\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcheck_input\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcheck_input\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    942\u001b[0m \u001b[43m        \u001b[49m\u001b[43mX_idx_sorted\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mX_idx_sorted\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    943\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    944\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\tree\\_classes.py:165\u001b[0m, in \u001b[0;36mBaseDecisionTree.fit\u001b[1;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[0;32m    163\u001b[0m check_X_params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(dtype\u001b[38;5;241m=\u001b[39mDTYPE, accept_sparse\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsc\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    164\u001b[0m check_y_params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(ensure_2d\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m--> 165\u001b[0m X, y \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_data\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    166\u001b[0m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalidate_separately\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcheck_X_params\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcheck_y_params\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    167\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    168\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m issparse(X):\n\u001b[0;32m    169\u001b[0m     X\u001b[38;5;241m.\u001b[39msort_indices()\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\base.py:578\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    572\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m validate_separately:\n\u001b[0;32m    573\u001b[0m     \u001b[38;5;66;03m# We need this because some estimators validate X and y\u001b[39;00m\n\u001b[0;32m    574\u001b[0m     \u001b[38;5;66;03m# separately, and in general, separately calling check_array()\u001b[39;00m\n\u001b[0;32m    575\u001b[0m     \u001b[38;5;66;03m# on X and y isn't equivalent to just calling check_X_y()\u001b[39;00m\n\u001b[0;32m    576\u001b[0m     \u001b[38;5;66;03m# :(\u001b[39;00m\n\u001b[0;32m    577\u001b[0m     check_X_params, check_y_params \u001b[38;5;241m=\u001b[39m validate_separately\n\u001b[1;32m--> 578\u001b[0m     X \u001b[38;5;241m=\u001b[39m check_array(X, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_X_params)\n\u001b[0;32m    579\u001b[0m     y \u001b[38;5;241m=\u001b[39m check_array(y, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_y_params)\n\u001b[0;32m    580\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:746\u001b[0m, in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator)\u001b[0m\n\u001b[0;32m    744\u001b[0m         array \u001b[38;5;241m=\u001b[39m array\u001b[38;5;241m.\u001b[39mastype(dtype, casting\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munsafe\u001b[39m\u001b[38;5;124m\"\u001b[39m, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m    745\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 746\u001b[0m         array \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43masarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    747\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m ComplexWarning \u001b[38;5;28;01mas\u001b[39;00m complex_warning:\n\u001b[0;32m    748\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    749\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mComplex data not supported\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(array)\n\u001b[0;32m    750\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcomplex_warning\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: float() argument must be a string or a number, not 'dict'"
+     ]
+    }
+   ],
    "source": [
     "clf = DecisionTreeClassifier(random_state=2021)\n",
+    "\n",
+    "X_train=X_train.dropna()\n",
+    "\"\"\"\n",
+    "X_train1 = X_train[X_train.isna().any(axis=1)]\n",
+    "print(X_train1)\n",
+    "\n",
     "#Acho que podemos converter os mais importantes para one-hot enconding ou algo do género. Depois continuo\n",
-    "#clf.fit(X_train, y_train)\n",
+    "print(\"Será que há NaN\")\n",
+    "count = np.isnan(X_train).values.sum()\n",
+    "print(\"X -> It contains \" + str(count) + \" nan values\")\n",
+    "count = np.isnan(y_train).values.sum()\n",
+    "print(\"Y -> It contains \" + str(count) + \" nan values\")\n",
+    "print(\"Será que há Inf\")\n",
+    "\n",
+    "count = np.isinf(X_train).values.sum()\n",
+    "print(\"X -> It contains \" + str(count) + \" infinite values\")\n",
+    "count = np.isinf(y_train).values.sum()\n",
+    "print(\"Y -> It contains \" + str(count) + \" infinite values\")\n",
+    "\n",
+    "print(X.info())\n",
+    "print(y.info())\n",
+    "\"\"\"\n",
+    "# Para este\n",
+    "y_train_transformed = lb_make.fit_transform(y_train)\n",
+    "X_train_transformed = {}\n",
+    "for coisa in X_train:\n",
+    "    print(X_train[coisa])\n",
+    "    X_train_transformed[coisa] = lb_make.fit_transform(X_train[coisa]) \n",
+    "# X_train_transformed = lb_make.fit_transform(X_train)\n",
+    "\n",
+    "clf.fit(X_train_transformed, y_train_transformed)\n",
     "\n",
     "#scores = cross_val_score(clf, X, y, cv=5)"
    ]
