Add comment to kfolding code.

--- a/competition/neural_network.ipynb
+++ b/competition/neural_network.ipynb
@@ -639,9 +639,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 63,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'TUNING_DICT' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn [63], line 6\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m#### Não funciona atualmente!\u001B[39;00m\n\u001B[0;32m      3\u001B[0m kf \u001B[38;5;241m=\u001B[39m KFold(n_splits\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m5\u001B[39m, shuffle\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, random_state\u001B[38;5;241m=\u001B[39mSEED)\n\u001B[0;32m      5\u001B[0m grid_search \u001B[38;5;241m=\u001B[39m GridSearchCV(estimator\u001B[38;5;241m=\u001B[39mmodel,\n\u001B[1;32m----> 6\u001B[0m                            param_grid\u001B[38;5;241m=\u001B[39mTUNING_DICT,\n\u001B[0;32m      7\u001B[0m                            cv\u001B[38;5;241m=\u001B[39mkf,\n\u001B[0;32m      8\u001B[0m                            scoring\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124maccuracy\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[0;32m      9\u001B[0m                            refit\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m,\n\u001B[0;32m     10\u001B[0m                            error_score\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mraise\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m     11\u001B[0m                            verbose\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m3\u001B[39m)\n\u001B[0;32m     13\u001B[0m grid_search\u001B[38;5;241m.\u001B[39mfit(X_train, y_train, validation_split\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.2\u001B[39m)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'TUNING_DICT' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "#### Não funciona atualmente!\n",
+    "\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=SEED)\n",
     "\n",
     "grid_search = GridSearchCV(estimator=model,\n",
