--- a/competition/neural_network.ipynb
+++ b/competition/neural_network.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2.9.1\n"
+      "UsageError: Line magic function `%` not found.\n"
      ]
     }
    ],
@@ -57,54 +57,6 @@
     "% matplotlib inline\n",
     "\n",
     "print(tf.__version__)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting git+https://github.com/tensorflow/docs\n",
-      "  Cloning https://github.com/tensorflow/docs to c:\\users\\gonca\\appdata\\local\\temp\\pip-req-build-en9nkq6u\n",
-      "  Resolved https://github.com/tensorflow/docs to commit b8d090113861d46bf007c087c089cb8442d41060\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Requirement already satisfied: astor in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from tensorflow-docs==0.0.0.dev0) (0.8.1)\n",
-      "Requirement already satisfied: absl-py in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from tensorflow-docs==0.0.0.dev0) (1.3.0)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from tensorflow-docs==0.0.0.dev0) (3.1.2)\n",
-      "Requirement already satisfied: nbformat in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from tensorflow-docs==0.0.0.dev0) (5.6.1)\n",
-      "Requirement already satisfied: protobuf<3.20,>=3.12.0 in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from tensorflow-docs==0.0.0.dev0) (3.19.6)\n",
-      "Requirement already satisfied: pyyaml in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from tensorflow-docs==0.0.0.dev0) (6.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from jinja2->tensorflow-docs==0.0.0.dev0) (2.1.1)\n",
-      "Requirement already satisfied: traitlets>=5.1 in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from nbformat->tensorflow-docs==0.0.0.dev0) (5.4.0)\n",
-      "Requirement already satisfied: jupyter-core in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from nbformat->tensorflow-docs==0.0.0.dev0) (4.11.1)\n",
-      "Requirement already satisfied: fastjsonschema in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from nbformat->tensorflow-docs==0.0.0.dev0) (2.16.2)\n",
-      "Requirement already satisfied: jsonschema>=2.6 in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from nbformat->tensorflow-docs==0.0.0.dev0) (4.16.0)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from jsonschema>=2.6->nbformat->tensorflow-docs==0.0.0.dev0) (22.1.0)\n",
-      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from jsonschema>=2.6->nbformat->tensorflow-docs==0.0.0.dev0) (0.18.1)\n",
-      "Requirement already satisfied: pywin32>=1.0 in c:\\users\\gonca\\.conda\\envs\\daa\\lib\\site-packages (from jupyter-core->nbformat->tensorflow-docs==0.0.0.dev0) (303)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/tensorflow/docs 'C:\\Users\\gonca\\AppData\\Local\\Temp\\pip-req-build-en9nkq6u'\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install git+https: // github.com / tensorflow / docs\n",
-    "\n",
-    "import tensorflow_docs as tfdocs\n",
-    "import tensorflow_docs.modeling\n",
-    "import tensorflow_docs.plots"
    ],
    "metadata": {
     "collapsed": false
