grafico circular para os anos feito

--- a/melhor_grupo/data_processing.ipynb
+++ b/melhor_grupo/data_processing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "5ed2ad4d-1c04-4634-82db-6fbd0b24abf1",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "0f6fd9d6-fc55-4245-a6bc-430c499880c3",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "e4487d42-b31d-4b1a-b2e8-277ec63d4d3e",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "e63043b4-4a5b-4c16-ba79-4970b5cbf27f",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "0a2cd099-babf-4e5f-8305-57dcba2c9326",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "5151aad0-7b62-4936-967f-1828eb8e0875",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "58d7702f-28fb-4c87-9e90-b0b3b24df69c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for coluna in df.columns:\n",
+    "    if coluna=='Region':\n",
+    "        print."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "b6d83980-01b0-43af-854d-fb07694f6072",
    "metadata": {},
    "outputs": [
@@ -300,8 +312,11 @@
     "# Esses dados são: \"State\", \"City\", \"Country\", \"Market\", \"Region\"\n",
     "percentage = 1\n",
     "\n",
+    "#dataset = df.iloc[:]\n",
+    "\n",
     "dataset = df\n",
-    "for coluna in [\"State\", \"City\", \"Country\", \"Region\" ]:\n",
+    "\n",
+    "for coluna in [\"State\", \"City\", \"Country\", \"Region\", \"Sub-Category\"]:\n",
     "\n",
     "        #print(coluna)\n",
     "        series = dataset.value_counts(dataset[coluna])\n",
@@ -712,12 +727,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "8f45f845-d09b-4fb7-89d0-5e2fb0afcd97",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "0b1b1b80-4e5b-4394-9e5f-02508a520d10",
@@ -834,56 +843,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e4489f7c-b9c9-430c-85b1-1932dab3e944",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 51200 entries, 32298 to 6147\n",
-      "Data columns (total 26 columns):\n",
-      " #   Column                 Non-Null Count  Dtype   \n",
-      "---  ------                 --------------  -----   \n",
-      " 0   Order ID               51200 non-null  object  \n",
-      " 1   Ship Mode              51200 non-null  category\n",
-      " 2   Customer Name          51200 non-null  object  \n",
-      " 3   Segment                51200 non-null  category\n",
-      " 4   City                   51200 non-null  object  \n",
-      " 5   State                  51200 non-null  object  \n",
-      " 6   Country                51200 non-null  object  \n",
-      " 7   Market                 51200 non-null  category\n",
-      " 8   Region                 51200 non-null  object  \n",
-      " 9   Product Name           51200 non-null  object  \n",
-      " 10  Quantity               51200 non-null  float64 \n",
-      " 11  Profit                 51200 non-null  float64 \n",
-      " 12  Shipping_Cost          51200 non-null  float64 \n",
-      " 13  Order_Priority         51200 non-null  int64   \n",
-      " 14  Year_order             51200 non-null  int64   \n",
-      " 15  Year_ship              51200 non-null  int64   \n",
-      " 16  Month_order            51200 non-null  int64   \n",
-      " 17  Month_ship             51200 non-null  int64   \n",
-      " 18  Day_order              51200 non-null  int64   \n",
-      " 19  Day_ship               51200 non-null  int64   \n",
-      " 20  Product ID LabelEnc    51200 non-null  int32   \n",
-      " 21  Costumer ID LabelEnc   51200 non-null  int32   \n",
-      " 22  Category LabelEnc      51200 non-null  int32   \n",
-      " 23  Sub-Category LabelEnc  51200 non-null  int32   \n",
-      " 24  Discount LabelEnc      51200 non-null  int32   \n",
-      " 25  Ship_mode_binned       51200 non-null  float64 \n",
-      "dtypes: category(3), float64(4), int32(5), int64(7), object(7)\n",
-      "memory usage: 8.5+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "id": "d6e0006e-532c-4db1-ab6c-38db126c260d",
    "metadata": {},
    "outputs": [
@@ -998,62 +957,6 @@
     "df = data5\n",
     "print(df)  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "b789b739-5fb8-4fee-b9fa-81f935bf8974",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Order ID                 0\n",
-       "Ship Mode                0\n",
-       "Customer Name            0\n",
-       "Segment                  0\n",
-       "City                     0\n",
-       "State                    0\n",
-       "Country                  0\n",
-       "Market                   0\n",
-       "Region                   0\n",
-       "Product Name             0\n",
-       "Quantity                 0\n",
-       "Profit                   0\n",
-       "Shipping_Cost            0\n",
-       "Order_Priority           0\n",
-       "Year_order               0\n",
-       "Year_ship                0\n",
-       "Month_order              0\n",
-       "Month_ship               0\n",
-       "Day_order                0\n",
-       "Day_ship                 0\n",
-       "Product ID LabelEnc      0\n",
-       "Costumer ID LabelEnc     0\n",
-       "Category LabelEnc        0\n",
-       "Sub-Category LabelEnc    0\n",
-       "Discount LabelEnc        0\n",
-       "Ship_mode_binned         0\n",
-       "Market_binned            0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ccbc6c5-3057-42f4-b02c-20d17b8817a8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
