--- a/melhor_grupo/model_general.ipynb
+++ b/melhor_grupo/model_general.ipynb
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "e32f4453",
    "metadata": {},
    "outputs": [
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ba2d6892",
    "metadata": {},
    "outputs": [
@@ -1293,14 +1293,18 @@
       "25%        0.563318\n",
       "50%        0.563944\n",
       "75%        0.565875\n",
-      "max        0.782535\n"
+      "max        0.782535\n",
+      "MSE1:  0.00010182814123421894\n",
+      "MSE2:  6.51639515399838e-05\n",
+      "MSE3:  3.5095038286040884e-05\n",
+      "MSE4:  0.00010183202279570162\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Diogo\\anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\_label.py:115: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "C:\\Users\\Diogo\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:993: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
     },
@@ -1308,11 +1312,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNeighborsClassifier(n_neighbors=3)\n"
+      "MSE6:  0.001352871505641368\n",
+      "[20:21:22] WARNING: C:/buildkite-agent/builds/buildkite-windows-cpu-autoscaling-group-i-030221e36e1a46bfb-1/xgboost/xgboost-ci-windows/src/objective/regression_obj.cu:213: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "MSE7:  0.0006398989320384297\n"
      ]
     }
    ],
    "source": [
+    "# Fui buscar daqui:\n",
+    "#https://towardsdatascience.com/7-of-the-most-commonly-used-regression-algorithms-and-how-to-choose-the-right-one-fc3c8890f9e3\n",
+    "\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "#from sklearn.tree import DecisionTreeClassifier\n",
@@ -1331,13 +1340,21 @@
     "#print(X_MLP)\n",
     "#print(\"OLÀ\")\n",
     "#print(y_MLP)\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "np.random.seed(10)\n",
+    "remove_n = 20000\n",
+    "drop_indices = np.random.choice(data3.index, remove_n, replace=False)\n",
+    "data3_subset = data3.drop(drop_indices)\n",
+    "X_MLP_subset = data3_subset.drop(17, axis=1)\n",
+    "y_MLP_subset = data3_subset[[17]]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_MLP, y_MLP, test_size=0.2, random_state=RANDOM_SEED)\n",
     "print(y_train.describe())\n",
     "print(y_test.describe())\n",
     "lr = LinearRegression().fit(X_train,y_train)\n",
-    "\"\"\"\n",
+    "\n",
     "#lm = linear_model.LinearRegression()\n",
-    "#model = lm.fit\n",
     "predictions = lr.predict(X_test)\n",
     "#print(\"R^2 de linear regression: \", lr.score(X_test, y_test))\n",
     "print ('MSE1: ', mean_squared_error(y_test, predictions))\n",
@@ -1380,7 +1397,55 @@
     "ransac.fit(X_train, y_train)\n",
     "predictionsRansac = ransac.predict(X_test)\n",
     "print ('MSE4: ', mean_squared_error(y_test, predictionsRansac))\n",
+    "\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.gaussian_process.kernels import (RBF, Matern, RationalQuadratic,ExpSineSquared, DotProduct,ConstantKernel)\n",
+    "\n",
+    "\"\"\"kernel = 1.0 * RBF(length_scale=1.0, length_scale_bounds=(1e-2, 1e3))\n",
+    "\n",
+    "gp = GaussianProcessRegressor(kernel=kernel, alpha=0.1)\n",
+    "gp.fit(X_train, y_train)\n",
     "\"\"\"\n",
+    "\n",
+    "Murta = False\n",
+    "if Murta:\n",
+    "    from sklearn.datasets import make_friedman2\n",
+    "    from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "    from sklearn.gaussian_process.kernels import DotProduct, WhiteKernel\n",
+    "\n",
+    "    kernel = DotProduct() + WhiteKernel()\n",
+    "    gp = GaussianProcessRegressor(kernel=kernel, random_state=0).fit(X_train, y_train)\n",
+    "    y_pred = gp.predict(X_test)\n",
+    "    print ('MSE5: ', mean_squared_error(y_test, y_pred))\n",
+    "    \n",
+    "from sklearn.svm import SVR\n",
+    "# Choose regression method and set hyperparameter\n",
+    "svr_rbf=SVR(C=1.0, epsilon=0.2, kernel='rbf')\n",
+    "\n",
+    "# Training of the regression model\n",
+    "svr_rbf.fit(X_train, y_train)\n",
+    "y_pred = svr_rbf.predict(X_test)\n",
+    "print ('MSE6: ', mean_squared_error(y_test, y_pred))\n",
+    "\n",
+    "import xgboost as xgb\n",
+    "\n",
+    "xg_reg = xgb.XGBRegressor(objective ='reg:linear', colsample_bytree = 0.3, learning_rate = 0.1,\n",
+    "                max_depth = 5, alpha = 10, n_estimators = 10)\n",
+    "\n",
+    "xg_reg.fit(X_train,y_train)\n",
+    "\n",
+    "preds = xg_reg.predict(X_test)\n",
+    "print ('MSE7: ', mean_squared_error(y_test, preds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "451b6044",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "from sklearn.gaussian_process.kernels import RBF\n",
     "from sklearn.gaussian_process import GaussianProcessClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -1398,22 +1463,15 @@
     "from sklearn import preprocessing\n",
     "from sklearn import utils\n",
     "\n",
-    "kernel =1.0 * RBF( length_scale=1.0 , length_scale_bounds=(1e-1, 10.0))\n",
-    "\n",
-    "#print(X_train)\n",
-    "#print(y_train)\n",
-    "#gpc = GaussianProcessClassifier(kernel=kernel, random_state=RANDOM_SEED).fit(X_train, y_train)\n",
-    "#predictionsGCP = gcp.predict(X_test)\n",
-    "#print ('MSE5: ', mean_squared_error(y_test, predictionsGCP))\n",
-    "\n",
+    "# Depois experimentar isto\n",
     "from sklearn import preprocessing\n",
     "from sklearn import utils\n",
     "lab = preprocessing.LabelEncoder()\n",
     "y_transformed = lab.fit_transform(y_train)\n",
     "classifiers = [\n",
     "    KNeighborsClassifier(3),\n",
-    "    SVC(C=0.025),\n",
-    "    SVC(gamma=2, C=1),\n",
+    "    #SVC(C=0.025), muitos lentos\n",
+    "    #SVC(gamma=2, C=1),\n",
     "    GaussianProcessClassifier(1.0 * RBF(1.0)),\n",
     "    DecisionTreeClassifier(max_depth=5),\n",
     "    RandomForestClassifier(max_depth=5),\n",
@@ -1426,7 +1484,7 @@
     "    clf = item\n",
     "    clf.fit(X_train, y_transformed)\n",
     "    predict = clf.predict(X_test)\n",
-    "    "
+    "    print ('MSE: ', mean_squared_error(y_test, predict))"
    ]
   },
   {
