alguns dos pontos feitos

--- a/melhor_grupo/data_processing.ipynb
+++ b/melhor_grupo/data_processing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "5ed2ad4d-1c04-4634-82db-6fbd0b24abf1",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "0f6fd9d6-fc55-4245-a6bc-430c499880c3",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "e4487d42-b31d-4b1a-b2e8-277ec63d4d3e",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "e63043b4-4a5b-4c16-ba79-4970b5cbf27f",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "0a2cd099-babf-4e5f-8305-57dcba2c9326",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "5151aad0-7b62-4936-967f-1828eb8e0875",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "b6d83980-01b0-43af-854d-fb07694f6072",
    "metadata": {},
    "outputs": [
@@ -822,8 +822,6 @@
     "    data4.loc[data4['Ship Mode'] == 4 ,'Ship_mode_binned'] = 0\n",
     "    data4.loc[data4['Ship Mode'] != 4 ,'Ship_mode_binned'] = 1\n",
     "    \n",
-    "   # data = data.drop(columns = ['Ship Mode'])\n",
-    "\n",
     "df = data4\n",
     "print(df)  "
    ]
@@ -940,9 +938,121 @@
     "    data5.loc[data4['Market'] == 'EMEA' ,'Market_binned'] = 'EMEA'\n",
     "    data5.loc[data4['Market'] == 'LATAM' ,'Market_binned'] = 'LATAM'\n",
     "    \n",
-    "   # data = data.drop(columns = ['Market'])\n",
-    "\n",
     "df = data5\n",
+    "print(df)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "35caae2b-a7db-4def-bd77-36a6b216606a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Order ID Ship Mode      Customer Name      Segment  \\\n",
+      "Row ID                                                              \n",
+      "32298    CA-2012-124891         1        Rick Hansen     Consumer   \n",
+      "26341     IN-2013-77878         3      Justin Ritter    Corporate   \n",
+      "25330     IN-2013-71249         2       Craig Reiter     Consumer   \n",
+      "13524   ES-2013-1579342         2   Katherine Murray  Home Office   \n",
+      "47221      SG-2013-4320         1        Rick Hansen     Consumer   \n",
+      "...                 ...       ...                ...          ...   \n",
+      "24175     IN-2014-57662         4  Deborah Brumfield  Home Office   \n",
+      "29002     IN-2014-62366         1    Katrina Edelman    Corporate   \n",
+      "35398    US-2014-102288         4   Zuschuss Carroll     Consumer   \n",
+      "9596     MX-2012-140767         4         Ross Baird  Home Office   \n",
+      "6147     MX-2012-134460         3      Mick Crebagga     Consumer   \n",
+      "\n",
+      "                 City            State        Country  Market      Region  \\\n",
+      "Row ID                                                                      \n",
+      "32298   New York City         New York  United States      US        East   \n",
+      "26341           Other  New South Wales      Australia    APAC     Oceania   \n",
+      "25330           Other       Queensland      Australia    APAC     Oceania   \n",
+      "13524           Other            Other        Germany      EU     Central   \n",
+      "47221           Other            Other          Other  Africa      Africa   \n",
+      "...               ...              ...            ...     ...         ...   \n",
+      "24175           Other       Queensland      Australia    APAC     Oceania   \n",
+      "29002           Other            Other          Other    APAC  North Asia   \n",
+      "35398           Other            Texas  United States      US     Central   \n",
+      "9596            Other            Other         Brazil   LATAM       South   \n",
+      "6147            Other            Other      Nicaragua   LATAM     Central   \n",
+      "\n",
+      "                                             Product Name  ...  Day_order  \\\n",
+      "Row ID                                                     ...              \n",
+      "32298   Plantronics CS510 - Over-the-Head monaural Wir...  ...         31   \n",
+      "26341           Novimex Executive Leather Armchair, Black  ...          5   \n",
+      "25330                   Nokia Smart Phone, with Caller ID  ...         17   \n",
+      "13524                      Motorola Smart Phone, Cordless  ...         28   \n",
+      "47221                      Sharp Wireless Fax, High-Speed  ...          5   \n",
+      "...                                                   ...  ...        ...   \n",
+      "24175                               Avery Binder, Economy  ...          5   \n",
+      "29002                       Advantus Thumb Tacks, 12 Pack  ...         19   \n",
+      "35398   Hoover Replacement Belt for Commercial Guardsm...  ...         20   \n",
+      "9596                              Acco Index Tab, Economy  ...         18   \n",
+      "6147              Eaton Computer Printout Paper, 8.5 x 11  ...         22   \n",
+      "\n",
+      "        Day_ship  Product ID LabelEnc  Costumer ID LabelEnc  \\\n",
+      "Row ID                                                        \n",
+      "32298         31                 8229                  1286   \n",
+      "26341          7                  907                   808   \n",
+      "25330         18                10140                   336   \n",
+      "13524         30                10129                   873   \n",
+      "47221          6                10232                  1290   \n",
+      "...          ...                  ...                   ...   \n",
+      "24175         10                 3683                   383   \n",
+      "29002         19                 4793                   854   \n",
+      "35398         24                 2622                  1587   \n",
+      "9596          22                 3484                  1249   \n",
+      "6147          26                 6546                   981   \n",
+      "\n",
+      "        Category LabelEnc  Sub-Category LabelEnc  Discount LabelEnc  \\\n",
+      "Row ID                                                                \n",
+      "32298                   2                      0                  0   \n",
+      "26341                   0                      5                  0   \n",
+      "25330                   2                     13                  0   \n",
+      "13524                   2                     13                  0   \n",
+      "47221                   2                      6                  0   \n",
+      "...                   ...                    ...                ...   \n",
+      "24175                   1                      3                  0   \n",
+      "29002                   1                      8                  0   \n",
+      "35398                   1                      1                  4   \n",
+      "9596                    1                      3                  0   \n",
+      "6147                    1                     12                  0   \n",
+      "\n",
+      "        Ship_mode_binned  Market_binned  Order_priority_binned  \n",
+      "Row ID                                                          \n",
+      "32298                1.0  Canada and US                    1.0  \n",
+      "26341                1.0           APAC                    1.0  \n",
+      "25330                1.0           APAC                    0.0  \n",
+      "13524                1.0             EU                    0.0  \n",
+      "47221                1.0         Africa                    1.0  \n",
+      "...                  ...            ...                    ...  \n",
+      "24175                0.0           APAC                    0.0  \n",
+      "29002                1.0           APAC                    0.0  \n",
+      "35398                0.0  Canada and US                    0.0  \n",
+      "9596                 0.0          LATAM                    0.0  \n",
+      "6147                 1.0          LATAM                    1.0  \n",
+      "\n",
+      "[51200 rows x 28 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#código que na feature order priority, junta o low com o medium e o critical com o high (não colocar no ficheiro das redes neuronais)\n",
+    "data6 = df \n",
+    "\n",
+    "if (data6['Order_Priority'].dtypes == 'int64'):\n",
+    "\n",
+    "    #Critical:1, High:2, Medium:3, Low:4\n",
+    "    data6.loc[data6['Order_Priority'] == 3 ,'Order_priority_binned'] = 0\n",
+    "    data6.loc[data6['Order_Priority'] == 4 ,'Order_priority_binned'] = 0\n",
+    "    data6.loc[data6['Order_Priority'] == 2 ,'Order_priority_binned'] = 1\n",
+    "    data6.loc[data6['Order_Priority'] == 1 ,'Order_priority_binned'] = 1\n",
+    "    \n",
+    "df = data6\n",
     "print(df)  "
    ]
   }
