--- a/melhor_grupo/model_general.ipynb
+++ b/melhor_grupo/model_general.ipynb
@@ -1331,24 +1331,8 @@
     "model = build_model()\n",
     "model.summary()\n",
     "\n",
-    "'''\n",
-    "TUNING_DICT = {\n",
-    "    'activation' : ['relu'],\n",
-    "    'learning_rate' : [0.01]\n",
-    "}\n",
-    "'''\n",
-    "#kf = KFold(n_splits=2, shuffle=True, random_state=RANDOM_SEED)\n",
-    "\n",
     "model = KerasRegressor(build_fn=build_model, epochs=15,batch_size=number_columns)\n",
-    "grid_search = model\n",
-    "'''\n",
-    "GridSearchCV(estimator = model,\n",
-    "                            param_grid = TUNING_DICT,\n",
-    "                            cv = kf,\n",
-    "                            scoring = 'neg_mean_absolute_error',\n",
-    "                            refit ='True',\n",
-    "                            verbose = 1)\n",
-    "'''"
+    "grid_search = model\n"
    ]
   },
   {
