--- a/melhor_grupo/decision_tree.ipynb
+++ b/melhor_grupo/decision_tree.ipynb
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "d9153073",
+   "id": "701a01ff",
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "36b26de6",
+   "id": "47a3601b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "b9369e0f",
+   "id": "8af2b0ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "c770c6e0",
+   "id": "bb02b360",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e23876b",
+   "id": "455c3aa6",
    "metadata": {},
    "source": [
     "# Análise da coluna objetivo"
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "077feb90",
+   "id": "f102d88b",
    "metadata": {},
    "outputs": [
     {
@@ -1100,13 +1100,14 @@
     "Para além disso, o RandomForestRegressor continua a ser o melhor modelo, com uma diferença de ~~11376 - 10350 =~~ 1026.\n",
     "\n",
     "Como a maior parte do lucro está concentrada entre 0 e 36 unidades monetárias, a média de erro pode ser considerada bastante má, porque tem o valor de 36. No entanto, tendo em conta a variação total do target, consideramos que o valor é bastante aceitável, porque \n",
-    "Estou a avaliar com coisas incorretas\n"
+    "\n",
+    "Estou a avaliar com coisas incorretas, não está o dataset todo\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f5389b8",
+   "id": "9da3a3fa",
    "metadata": {},
    "outputs": [],
    "source": []
