exportado dataset e removido outliers do sales e profit

--- a/melhor_grupo/data_processing.ipynb
+++ b/melhor_grupo/data_processing.ipynb
@@ -945,6 +945,16 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "a89c2cb9-2578-46cd-abba-d7572f82cd31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"new_Global_Superstore2.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "35caae2b-a7db-4def-bd77-36a6b216606a",
    "metadata": {},
    "outputs": [
